tests/ui/lifetimes/issue-76168-hr-outlives-3.stderr
error[E0277]: expected a `FnOnce(&'a mut i32)` closure, found `i32`
  --> $DIR/issue-76168-hr-outlives-3.rs:6:1
   |
LL | / async fn wrapper<F>(f: F)
...  |
LL | | F:,
LL | | for<'a> <i32 as FnOnce<(&'a mut i32,)>>::Output: Future<Output = ()> + 'a,
   | |__________________________________________________________________________^ expected an `FnOnce(&'a mut i32)` closure, found `i32`
   |
   = help: the trait `for<'a> FnOnce(&'a mut i32)` is not implemented for `i32`

error[E0277]: expected a `FnOnce(&'a mut i32)` closure, found `i32`
  --> $DIR/issue-76168-hr-outlives-3.rs:12:50
   |
LL | for<'a> <i32 as FnOnce<(&'a mut i32,)>>::Output: Future<Output = ()> + 'a,
   |                                                  ^^^^^^^^^^^^^^^^^^^ expected an `FnOnce(&'a mut i32)` closure, found `i32`
   |
   = help: the trait `for<'a> FnOnce(&'a mut i32)` is not implemented for `i32`

error[E0277]: expected a `FnOnce(&'a mut i32)` closure, found `i32`
  --> $DIR/issue-76168-hr-outlives-3.rs:12:57
   |
LL | for<'a> <i32 as FnOnce<(&'a mut i32,)>>::Output: Future<Output = ()> + 'a,
   |                                                         ^^^^^^^^^^^ expected an `FnOnce(&'a mut i32)` closure, found `i32`
   |
   = help: the trait `for<'a> FnOnce(&'a mut i32)` is not implemented for `i32`

error[E0277]: expected a `FnOnce(&'a mut i32)` closure, found `i32`
  --> $DIR/issue-76168-hr-outlives-3.rs:12:72
   |
LL | for<'a> <i32 as FnOnce<(&'a mut i32,)>>::Output: Future<Output = ()> + 'a,
   |                                                                        ^^ expected an `FnOnce(&'a mut i32)` closure, found `i32`
   |
   = help: the trait `for<'a> FnOnce(&'a mut i32)` is not implemented for `i32`

error[E0277]: expected a `FnOnce(&'a mut i32)` closure, found `i32`
  --> $DIR/issue-76168-hr-outlives-3.rs:6:1
   |
LL | / async fn wrapper<F>(f: F)
...  |
LL | | F:,
LL | | for<'a> <i32 as FnOnce<(&'a mut i32,)>>::Output: Future<Output = ()> + 'a,
   | |__________________________________________________________________________^ expected an `FnOnce(&'a mut i32)` closure, found `i32`
   |
   = help: the trait `for<'a> FnOnce(&'a mut i32)` is not implemented for `i32`

error[E0277]: expected a `FnOnce(&'a mut i32)` closure, found `i32`
  --> $DIR/issue-76168-hr-outlives-3.rs:6:1
   |
LL | / async fn wrapper<F>(f: F)
...  |
LL | | F:,
LL | | for<'a> <i32 as FnOnce<(&'a mut i32,)>>::Output: Future<Output = ()> + 'a,
   | |__________________________________________________________________________^ expected an `FnOnce(&'a mut i32)` closure, found `i32`
   |
   = help: the trait `for<'a> FnOnce(&'a mut i32)` is not implemented for `i32`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0277]: expected a `FnOnce(&'a mut i32)` closure, found `i32`
  --> $DIR/issue-76168-hr-outlives-3.rs:16:1
   |
LL | / {
LL | |
LL | |     let mut i = 41;
LL | |     &mut i;
LL | | }
   | |_^ expected an `FnOnce(&'a mut i32)` closure, found `i32`
   |
   = help: the trait `for<'a> FnOnce(&'a mut i32)` is not implemented for `i32`

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0277`.
